--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 group 'com.clemens'
-version '1.0-SNAPSHOT'
+version '1.1.0'
 
 sourceCompatibility = 1.8
 
